--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -6,52 +6,52 @@
   box-shadow: #BEE3DB 0px 1px 3px 0px, #89B0AE 0px 1px 2px 0px;
 }
 
-.card__image {
+.image {
   width: 100%;
   border-radius: 10px 10px 0 0;
 }
 
-.card__bottom {
+.bottom {
   padding: 0 0.5em 0.5em;
   display: flex;
   flex-direction: column;
   gap: 0.1em;
 }
 
-.card__name {
+.name {
   text-transform: uppercase;
   font-weight: 600;
   font-size: calc(.6em + .5vw);
   color: #555B6E;
 }
 
-.card__location {
+.location {
   text-transform: uppercase;
   font-weight: 300;
   font-size: calc(.4em + .4vw);
 }
 
-.card__info_bottom {
+.info-bottom {
   margin: 0.2em 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.card__province,
-.card__altitude {
+.province,
+.altitude {
   font-size: calc(.4em + .5vw);
   color: #555B6E;
 }
 
-.card__description {
+.description {
   padding-top: 0.2em;
   border-top: .1px solid #C4CBCB;
   font-weight: 300;
   font-size: calc(.4em + .5vw);
 }
 
-.card__buttons {
+.buttons {
   margin-top: 0.2em;
   display: flex;
   justify-content: space-between;
