--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,13 @@ body {
   -webkit-text-size-adjust: 100%;
 }
 
+#root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 h1 {
   font-size: calc(1.2em + 1vw);
   line-height: 1.1;
