--- a/src/pages/MainLayout.module.css
+++ b/src/pages/MainLayout.module.css
@@ -4,13 +4,12 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100%;
+  margin: 2em 0 4em;
 }
 
 .section {
-  margin-top: 1.5em;
   width: 90%;
   display: flex;
   flex-direction: column;
-  gap: 1.5em;
+  gap: 2em;
 }
