--- a/src/components/FormsComponents/Form/Form.module.css
+++ b/src/components/FormsComponents/Form/Form.module.css
@@ -9,6 +9,10 @@
   box-shadow: #BEE3DB 0px 1px 3px 0px, #89B0AE 0px 1px 2px 0px;
 }
 
+.fieldset {
+  border: none;
+}
+
 .label {
   text-transform: uppercase;
   font-weight: 600;
@@ -71,8 +75,7 @@
   pointer-events: none;
 }
 
-.file::-webkit-file-upload-button,
-.submit {
+.file::-webkit-file-upload-button {
   padding: .3em;
   gap: 0.3em;
   background-color: #89B0AE;
@@ -92,8 +95,7 @@
   pointer-events: all;
 }
 
-.file:hover::-webkit-file-upload-button,
-.submit:hover {
+.file:hover::-webkit-file-upload-button {
   background-color: #BEE3DB;
   color: #555B6E;
 }
@@ -109,6 +111,7 @@
 .checkbox {
   width: calc(.6em + .5vw);
   height: calc(.6em + .5vw);
+  align-self: center;
   display: grid;
   place-content: center;
   border: 1px solid #BEE3DB;
@@ -120,8 +123,8 @@
 
 .checkbox::before {
   content: '';
-  width: calc(.43em + .3vw);
-  height: calc(.43em + .3vw);
+  width: calc(.3em + .3vw);
+  height: calc(.3em + .3vw);
   transform: scale(0);
   transition: 120ms transform ease-in-out;
   box-shadow: inset 1em 1em #89B0AE;
@@ -137,17 +140,11 @@
   height: fit-content;
 }
 
-.submit {
-  margin-top: .5em;
+.privacy > p {
+  height: calc(.6em + .5vw);
 }
 
-.confirmation {
-  text-align: center;
-}
-
-.error {
-  color: #89B0AE;
-  text-transform: uppercase;
-  font-weight: 600;
-  font-size: calc(.4em + .3vw);
+.wrapper {
+  display: flex;
+  flex-direction: column;
 }
