--- a/src/components/FormsComponents/ReviewsList/ReviewsList.module.css
+++ b/src/components/FormsComponents/ReviewsList/ReviewsList.module.css
@@ -3,3 +3,11 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 2em;
 }
+
+@media (max-width: 1050px) {
+  .reviews {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2em;
+  }
+}
