--- a/src/pages/Layout.module.css
+++ b/src/pages/Layout.module.css
@@ -1,16 +1,19 @@
 .main {
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
   margin: 2em 0 4em;
 }
 
 .section {
   width: 90%;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 2em;
 }
 
