--- a/src/components/HomeComponents/SearchBar/SearchBar.module.css
+++ b/src/components/HomeComponents/SearchBar/SearchBar.module.css
@@ -36,15 +36,9 @@
   background-color: #F0EEEE;
 }
 
-.btn {
-  margin-top: .1em;
-  margin-right: 1.5em;
-  border: none;
-  background-color: #F4F2F2;
-  cursor: default;
-}
-
 .icon {
+  margin-right: 1.5em;
+  margin-bottom: .1em;
   height: 1.4em;
   width: 1.4em;
   fill: #89B0AE;
