--- a/src/components/HomeComponents/Loader/Loader.module.css
+++ b/src/components/HomeComponents/Loader/Loader.module.css
@@ -1,7 +1,7 @@
 .loader {
   position: relative;
   display: inline-block;
-  align-self: center;
+  align-self: flex-start;
   width: calc(4em + 3vw);
 }
 
