--- a/src/components/HomeComponents/SearchBar/SearchBar.module.css
+++ b/src/components/HomeComponents/SearchBar/SearchBar.module.css
@@ -10,6 +10,7 @@
   width: 100%;
   padding: .8rem 1.5rem;
   margin-right: -2rem;
+  align-self: flex-start;
   border: none;
   border-radius: 20px;
   font-size: calc(.7em + .4vw);
