--- a/src/pages/Layout.module.css
+++ b/src/pages/Layout.module.css
@@ -1,5 +1,6 @@
 .main {
   width: 100%;
+  height: calc(100% + 20vh);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,6 +11,7 @@
 .section {
   width: 90%;
   height: 100%;
+  min-height: calc(100% - 20vh);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
