--- a/cypress-coverage/lcov-report/src/components/FormsComponents/Form/Form.tsx.html
+++ b/cypress-coverage/lcov-report/src/components/FormsComponents/Form/Form.tsx.html
@@ -23,30 +23,30 @@
         <div class='clearfix'>
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">85.71% </span>
+                <span class="strong">100% </span>
                 <span class="quiet">Statements</span>
-                <span class='fraction'>18/21</span>
+                <span class='fraction'>21/21</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">88.88% </span>
+                <span class="strong">100% </span>
                 <span class="quiet">Branches</span>
-                <span class='fraction'>16/18</span>
+                <span class='fraction'>16/16</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">75% </span>
+                <span class="strong">100% </span>
                 <span class="quiet">Functions</span>
-                <span class='fraction'>6/8</span>
+                <span class='fraction'>8/8</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">87.5% </span>
+                <span class="strong">100% </span>
                 <span class="quiet">Lines</span>
-                <span class='fraction'>14/16</span>
+                <span class='fraction'>16/16</span>
             </div>
         
             
@@ -238,7 +238,10 @@
 <a name='L173'></a><a href='#L173'>173</a>
 <a name='L174'></a><a href='#L174'>174</a>
 <a name='L175'></a><a href='#L175'>175</a>
-<a name='L176'></a><a href='#L176'>176</a></td><td class="line-coverage quiet"><span class="cline-any cline-neutral">&nbsp;</span>
+<a name='L176'></a><a href='#L176'>176</a>
+<a name='L177'></a><a href='#L177'>177</a>
+<a name='L178'></a><a href='#L178'>178</a>
+<a name='L179'></a><a href='#L179'>179</a></td><td class="line-coverage quiet"><span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
@@ -248,11 +251,6 @@
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-yes">12x</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
@@ -263,19 +261,28 @@
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
+<span class="cline-any cline-neutral">&nbsp;</span>
+<span class="cline-any cline-yes">12x</span>
+<span class="cline-any cline-neutral">&nbsp;</span>
+<span class="cline-any cline-neutral">&nbsp;</span>
+<span class="cline-any cline-neutral">&nbsp;</span>
+<span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-yes">12x</span>
 <span class="cline-any cline-yes">12x</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-yes">12x</span>
-<span class="cline-any cline-yes">12x</span>
+<span class="cline-any cline-yes">13x</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-yes">12x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-neutral">&nbsp;</span>
+<span class="cline-any cline-neutral">&nbsp;</span>
+<span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
@@ -409,7 +416,6 @@
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-yes">4x</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-yes">4x</span>
@@ -426,6 +432,7 @@ import useValidation from './Validation/Validation';
 import { useAppDispatch, useAppSelector } from '../../../store/hooks';
 import { RootState } from '../../../store/store';
 import { setReviewData } from '../../../store/slices/formSlice';
+import { FormData } from './Form.types';
 &nbsp;
 const Form = (): JSX.Element =&gt; {
   const {
@@ -433,24 +440,27 @@ const Form = (): JSX.Element =&gt; {
     handleSubmit,
     reset,
     formState: { errors, isSubmitSuccessful },
-  } = useForm&lt;Review&gt;({
+  } = useForm&lt;FormData&gt;({
     criteriaMode: 'all',
     mode: 'onSubmit',
     reValidateMode: 'onSubmit',
   });
-  const { onFileUpload, onArrivalChange, dateRules, avatarRules } = useValidation();
+  const { onArrivalChange, dateRules, avatarRules } = useValidation();
   const ratingsDescOrder: number[] = [5, 4, 3, 2, 1];
 &nbsp;
   const dispatch = useAppDispatch();
   const reviews = useAppSelector((state: RootState) =&gt; state.form.reviews);
 &nbsp;
-  const onSubmit = (review: Review) =&gt; {
-    setTimeout(<span class="fstat-no" title="function not covered" >() =&gt; <span class="cstat-no" title="statement not covered" >r</span>eset(), 1</span>500);
+  const onSubmit = (review: FormData) =&gt; {
+    setTimeout(() =&gt; reset(), 1500);
 &nbsp;
-    const url: string =
-      typeof review.image === 'string' ? <span class="branch-0 cbranch-no" title="branch not covered" >review.image : U</span>RL.createObjectURL(review.image[0]);
-<span class="cstat-no" title="statement not covered" >    setTimeout(</span>
-<span class="fstat-no" title="function not covered" >      () =&gt; <span class="cstat-no" title="statement not covered" >d</span>ispatch(setReviewData([...reviews, { ...review, image: url, id: reviews.length }])),</span>
+    const newReview: Review = {
+      ...review,
+      image: URL.createObjectURL(review.image[0]),
+    };
+&nbsp;
+    setTimeout(
+      () =&gt; dispatch(setReviewData([...reviews, { ...newReview, id: reviews.length }])),
       1500
     );
   };
@@ -547,7 +557,6 @@ const Form = (): JSX.Element =&gt; {
             required: Errors.required,
             validate: avatarRules,
           })}
-          onChange={onFileUpload}
           data-cy="image"
         /&gt;
         {errors.image?.types &amp;&amp; &lt;ValidationError message={errors.image.message} /&gt;}
@@ -578,7 +587,7 @@ const Form = (): JSX.Element =&gt; {
           data-cy="submit"
         /&gt;
         {isSubmitSuccessful &amp;&amp; (
-<span class="branch-1 cbranch-no" title="branch not covered" >          &lt;p className={styles.confirmation} data-cy="submit-message"&gt;</span>
+          &lt;p className={styles.confirmation} data-cy="submit-message"&gt;
             Your review has been successfully submitted!
           &lt;/p&gt;
         )}
@@ -595,7 +604,7 @@ export default Form;
             <div class='footer quiet pad2 space-top1 center small'>
                 Code coverage generated by
                 <a href="https://istanbul.js.org/" target="_blank" rel="noopener noreferrer">istanbul</a>
-                at 2023-04-27T08:34:03.168Z
+                at 2023-04-27T18:42:56.473Z
             </div>
         <script src="../../../../prettify.js"></script>
         <script>
