--- a/cypress-coverage/lcov-report/src/components/HomeComponents/Catalogue/Catalogue.tsx.html
+++ b/cypress-coverage/lcov-report/src/components/HomeComponents/Catalogue/Catalogue.tsx.html
@@ -23,30 +23,30 @@
         <div class='clearfix'>
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">28.57% </span>
+                <span class="strong">100% </span>
                 <span class="quiet">Statements</span>
-                <span class='fraction'>4/14</span>
+                <span class='fraction'>14/14</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">0% </span>
+                <span class="strong">100% </span>
                 <span class="quiet">Branches</span>
-                <span class='fraction'>0/12</span>
+                <span class='fraction'>12/12</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">0% </span>
+                <span class="strong">100% </span>
                 <span class="quiet">Functions</span>
-                <span class='fraction'>0/5</span>
+                <span class='fraction'>5/5</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">40% </span>
+                <span class="strong">100% </span>
                 <span class="quiet">Lines</span>
-                <span class='fraction'>4/10</span>
+                <span class='fraction'>10/10</span>
             </div>
         
             
@@ -61,7 +61,7 @@
             </div>
         </template>
     </div>
-    <div class='status-line low'></div>
+    <div class='status-line high'></div>
     <pre><table class="coverage">
 <tr><td class="line-count quiet"><a name='L1'></a><a href='#L1'>1</a>
 <a name='L2'></a><a href='#L2'>2</a>
@@ -113,23 +113,21 @@
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-yes">4x</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-yes">4x</span>
+<span class="cline-any cline-yes">18x</span>
+<span class="cline-any cline-yes">18x</span>
+<span class="cline-any cline-yes">30x</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-yes">18x</span>
+<span class="cline-any cline-yes">9x</span>
+<span class="cline-any cline-yes">9x</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
+<span class="cline-any cline-yes">18x</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
+<span class="cline-any cline-yes">49x</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
@@ -138,9 +136,11 @@
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-yes">4x</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-yes">4x</span>
+<span class="cline-any cline-neutral">&nbsp;</span>
+<span class="cline-any cline-yes">11x</span>
+<span class="cline-any cline-neutral">&nbsp;</span>
+<span class="cline-any cline-yes">11x</span>
 <span class="cline-any cline-neutral">&nbsp;</span></td><td class="text"><pre class="prettyprint lang-js">import React, { useEffect } from 'react';
 import styles from './Catalogue.module.css';
 import Card from '../Card/Card';
@@ -152,21 +152,21 @@ import { API_PATH, SEARCH_QUERY } from '../../../utils/consts';
 import ProgressIndicator from '../Loader/Loader';
 import Modal from '../Modal/Modal';
 &nbsp;
-const Catalogue<span class="cstat-no" title="statement not covered" ><span class="fstat-no" title="function not covered" > = <span class="fstat-no" title="function not covered" >(</span>): JSX.Element =&gt; <span class="cstat-no" title="statement not covered" >{</span></span></span>
-  const dispatch = <span class="cstat-no" title="statement not covered" >useAppDispatch();</span>
-  const { query, result, isLoading, isSelected } = <span class="cstat-no" title="statement not covered" >useAppSelector(<span class="fstat-no" title="function not covered" >(s</span>tate: RootState) =&gt; <span class="cstat-no" title="statement not covered" >state.api)</span>;</span>
+const Catalogue = (): JSX.Element =&gt; {
+  const dispatch = useAppDispatch();
+  const { query, result, isLoading, isSelected } = useAppSelector((state: RootState) =&gt; state.api);
 &nbsp;
-<span class="cstat-no" title="statement not covered" >  useEffect(<span class="fstat-no" title="function not covered" >() =&gt; {</span></span>
-    const requestUrl = <span class="cstat-no" title="statement not covered" >query ? `${API_PATH}${SEARCH_QUERY}${query}` : API_PATH;</span>
-<span class="cstat-no" title="statement not covered" >    dispatch(fetchApi(requestUrl));</span>
+  useEffect(() =&gt; {
+    const requestUrl = query ? `${API_PATH}${SEARCH_QUERY}${query}` : API_PATH;
+    dispatch(fetchApi(requestUrl));
   }, [dispatch, query]);
 &nbsp;
-<span class="cstat-no" title="statement not covered" >  return (</span>
+  return (
     &lt;div className={styles.wrapper}&gt;
       {isLoading &amp;&amp; &lt;ProgressIndicator /&gt;}
       {!isLoading &amp;&amp; (
         &lt;div className={styles.catalogue}&gt;
-          {result.length &gt; 0 &amp;&amp; result.map(<span class="fstat-no" title="function not covered" >(i</span>tem: Hut) =&gt; <span class="cstat-no" title="statement not covered" >&lt;Card key={item.id} hut={item} /&gt;)</span>}
+          {result.length &gt; 0 &amp;&amp; result.map((item: Hut) =&gt; &lt;Card key={item.id} hut={item} /&gt;)}
           {result.length === 0 &amp;&amp; (
             &lt;p className={styles.error} data-cy="no-data"&gt;
               No data found
@@ -187,7 +187,7 @@ export default Catalogue;
             <div class='footer quiet pad2 space-top1 center small'>
                 Code coverage generated by
                 <a href="https://istanbul.js.org/" target="_blank" rel="noopener noreferrer">istanbul</a>
-                at 2023-04-27T18:42:56.473Z
+                at 2023-04-27T18:51:42.422Z
             </div>
         <script src="../../../../prettify.js"></script>
         <script>
